-Increased the chance of a giant glowshroom tree to randomly grow on mushroom moss
-Changed the necronomicon's use sound
-Stitch's magic wand bolts no longer go through blocks
-Gilded bricks now produce gold dust when broken instead of stone dust
-Catacomb flooring bricks now produce bone dust when broken instead of stone dust



~BUGS AND OTHER FIXES~


Fixed all of the following bugs and issues:

-Being able switch to other items in your hotbar while using spooky mod's holdout weapons (such as the slingshots and the old hunter's crossbow)
-Chat messages for the catacomb barrier keys not being localized, and spamming in chat when they keys were used in multiplayer
-Red & purple solution not converting ash grass into eye valley grass
-Samson's cuff ability not working at all
-Spooky mod armor glowmasks showing through items equipped in your vanity
-Spooky mod armor glowmasks not being affected by dyes
-Spooky mod weapons that use the melee swing extension visual not scaling up/down their physical and hitbox size if the weapon itself has a reforgement that made it smaller or bigger
-Some spooky mod melee swing extensions having slightly incorrectly sized hitboxes
-Skull smasher's right click ability dealing double the weapons base damage
-Both catacomb layers sometimes generating with no vertical pathways
-Daffodil's arena generating with layer 2 grass walls in it, which would cause daffodil to despawn during the fight
-Daffodil, pandora's box, and big bone's flower pot spawning in subworlds
-Pets on the character display screen being animated if you weren't hovering over that character, and bobbing up and down for some reason
-Spooky mod flails making tile collision sounds and dusts when they retracted to you if you are standing on the ground
-Chained eyes causing the player to spaz out if your cursor was above, below, or in the middle of your player
-Snot ball being able to damage enemies while returning to you after the snot ball itself is launched