@@ -1,0 +1,46 @@
+using Terraria;
+using Terraria.ID;
+using Terraria.ModLoader;
+using Terraria.DataStructures;
+using Microsoft.Xna.Framework;
+
+using Spooky.Content.Projectiles.SpiderCave;
+
+namespace Spooky.Content.Items.SpiderCave
+{
+	public class OrbWeaverShield : ModItem
+	{
+		public override void SetDefaults()
+		{
+			Item.damage = 20;
+			Item.DamageType = DamageClass.Melee;
+			Item.noMelee = true;
+			Item.autoReuse = false;
+			Item.noUseGraphic = true;
+			Item.channel = true;
+			Item.width = 28;
+			Item.height = 44;
+			Item.useTime = 45;
+			Item.useAnimation = 45;
+			Item.useStyle = ItemUseStyleID.Shoot;
+			Item.knockBack = 4;
+			Item.rare = ItemRarityID.Blue;
+			Item.value = Item.buyPrice(gold: 8);
+			Item.UseSound = SoundID.Item1;
+			Item.shoot = ModContent.ProjectileType<OrbWeaverShieldProj>();
+			Item.shootSpeed = 0f;
+		}
+
+		public override bool CanUseItem(Player player)
+		{
+			return player.ownedProjectileCounts[ModContent.ProjectileType<OrbWeaverShieldProj>()] < 1;
+		}
+
+		public override bool Shoot(Player player, EntitySource_ItemUse_WithAmmo source, Vector2 position, Vector2 velocity, int type, int damage, float knockback)
+		{
+			Projectile.NewProjectile(source, position.X, position.Y, 0, 0, ModContent.ProjectileType<OrbWeaverShieldProj>(), damage, knockback, player.whoAmI);
+
+			return false;
+		}
+    }
+}
