@@ -293,3 +293,5 @@ WeaverSpikeRed.DisplayName: Weaver Spike Red
 WeaverSpikeGreen.DisplayName: Weaver Spike Green
 WeaverSpikeBlack.DisplayName: Weaver Spike Black
 Local58Moon.DisplayName: Local58 Moon
+OrbWeaverShieldProj.DisplayName: Orb Weaver Shield Proj
+OrbWeaverShieldSpikeBig.DisplayName: Orb Weaver Shield Spike Big
